--- a/document.tex
+++ b/document.tex
@@ -25,12 +25,12 @@
 \setgroup{М9119-09.04.01иибд}
 \setfaculty{09.04.01 Информатика и вычислительная техника}
 \setprogram{Искусственный интеллект и большие данные}
-\setsupervisor{Тыщено Андрей Геннадьевич}{ } %#TODO setsupervisor
-\setdirector{Мирин Илья Геннадьевич}{}%#TODO setdirector
-\setdeputy{Сапрыкина Елена Валерьевна}{к.э.н.}%#TODO setdeputy
-\setreviewer{Луньков Андрей Аллександрович}{зав. лаб.  НЦВИ ИОФ РАН, к.ф.-м.н.}%#TODO setreviewer
-\setexportsupervisor{Сапрыкина Елена Валерьевна}{зам. директора ШЦЭ}%#TODO setexportsupervisor
-\setsecretary{Тихонова Татьяна Сергеевна}{}%#TODO setsecretary
+% \setsupervisor{Тыщено Андрей Геннадьевич}{ } %#TODO setsupervisor
+% \setdirector{Мирин Илья Геннадьевич}{}%#TODO setdirector
+% \setdeputy{Сапрыкина Елена Валерьевна}{к.э.н.}%#TODO setdeputy
+% \setreviewer{Луньков Андрей Аллександрович}{зав. лаб.  НЦВИ ИОФ РАН, к.ф.-м.н.}%#TODO setreviewer
+% \setexportsupervisor{Сапрыкина Елена Валерьевна}{зам. директора ШЦЭ}%#TODO setexportsupervisor
+% \setsecretary{Тихонова Татьяна Сергеевна}{}%#TODO setsecretary
 \title{Извлечение признакового представления исходного кода с использованием методов обучения без учителя для downstream обучения моделей}
 \setconsultant{Тыщено Андрей Геннадьевич}%#TODO setconsultant
 
