--- a/references.bib
+++ b/references.bib
@@ -3,8 +3,6 @@
     author={Mathilde Caron and Hugo Touvron and Ishan Misra and Hervé Jégou and Julien Mairal and Piotr Bojanowski and Armand Joulin},
     title={Emerging Properties in Self-Supervised Vision Transformers}, 
     year={2021},
-    url={https://arxiv.org/abs/2104.14294},    
-    urldate      = {2025-02-18},
 }
 @article{guo2022unixcoder,
   language     = {english},
@@ -12,28 +10,21 @@
   author={Guo, Daya and Lu, Shuai and Duan, Nan and Wang, Yanlin and Zhou, Ming and Yin, Jian},
   journal={arXiv preprint arXiv:2203.03850},
   year={2022},
-  urldate      = {2025-03-11},
 }
-@misc{feng2020codebertpretrainedmodelprogramming,
+@article{feng2020codebertpretrainedmodelprogramming,
   language     = {english},
       title={CodeBERT: A Pre-Trained Model for Programming and Natural Languages}, 
       author={Zhangyin Feng and Daya Guo and Duyu Tang and Nan Duan and Xiaocheng Feng and Ming Gong and Linjun Shou and Bing Qin and Ting Liu and Daxin Jiang and Ming Zhou},
       year={2020},
-      eprint={2002.08155},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2002.08155}, 
-      urldate      = {2025-03-11},
+      journal={arXiv},
 }
-@misc{dao2022flashattentionfastmemoryefficientexact,
+@article{dao2022flashattentionfastmemoryefficientexact,
       language     = {english},
       title={FlashAttention: Fast and Memory-Efficient Exact Attention with IO-Awareness}, 
       author={Tri Dao and Daniel Y. Fu and Stefano Ermon and Atri Rudra and Christopher Ré},
       year={2022},
-      eprint={2205.14135},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG},
-      url={https://arxiv.org/abs/2205.14135}, 
+      journal={arXiv},
+      
 }
 @misc{codeforcesyoink,
   author={yolomachine},
@@ -42,40 +33,92 @@
   year={2021},
   urldate      = {2025-02-21},
 }
-@misc{puri2021codenetlargescaleaicode,
+@article{puri2021codenetlargescaleaicode,
       language     = {english},
       title={CodeNet: A Large-Scale AI for Code Dataset for Learning a Diversity of Coding Tasks}, 
       author={Ruchir Puri and David S. Kung and Geert Janssen and Wei Zhang and Giacomo Domeniconi and Vladimir Zolotov and Julian Dolby and Jie Chen and Mihir Choudhury and Lindsey Decker and Veronika Thost and Luca Buratti and Saurabh Pujar and Shyam Ramji and Ulrich Finkler and Susan Malaika and Frederick Reiss},
       year={2021},
-      eprint={2105.12655},
-      archivePrefix={arXiv},
-      primaryClass={cs.SE},
-      url={https://arxiv.org/abs/2105.12655}, 
+      journal={arXiv},
 }
-@misc{sinha2021maskedlanguagemodelingdistributional,
+@article{sinha2021maskedlanguagemodelingdistributional,
       title={Masked Language Modeling and the Distributional Hypothesis: Order Word Matters Pre-training for Little}, 
       author={Koustuv Sinha and Robin Jia and Dieuwke Hupkes and Joelle Pineau and Adina Williams and Douwe Kiela},
       year={2021},
-      eprint={2104.06644},
-      archivePrefix={arXiv},
-      primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2104.06644}, 
+      journal={arXiv},
 }
-@misc{oquab2024dinov2learningrobustvisual,
+@article{oquab2024dinov2learningrobustvisual,
       title={DINOv2: Learning Robust Visual Features without Supervision}, 
       author={Maxime Oquab and Timothée Darcet and Théo Moutakanni and Huy Vo and Marc Szafraniec and Vasil Khalidov and Pierre Fernandez and Daniel Haziza and Francisco Massa and Alaaeldin El-Nouby and Mahmoud Assran and Nicolas Ballas and Wojciech Galuba and Russell Howes and Po-Yao Huang and Shang-Wen Li and Ishan Misra and Michael Rabbat and Vasu Sharma and Gabriel Synnaeve and Hu Xu and Hervé Jegou and Julien Mairal and Patrick Labatut and Armand Joulin and Piotr Bojanowski},
       year={2024},
-      eprint={2304.07193},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2304.07193}, 
+      journal={arXiv},
 }
-@misc{darcet2024visiontransformersneedregisters,
+@article{darcet2024visiontransformersneedregisters,
       title={Vision Transformers Need Registers}, 
       author={Timothée Darcet and Maxime Oquab and Julien Mairal and Piotr Bojanowski},
       year={2024},
-      eprint={2309.16588},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2309.16588}, 
+      journal={arXiv},
+}
+@article{clark2020electrapretrainingtextencoders,
+      title={ELECTRA: Pre-training Text Encoders as Discriminators Rather Than Generators}, 
+      author={Kevin Clark and Minh-Thang Luong and Quoc V. Le and Christopher D. Manning},
+      year={2020},
+      journal={arXiv},
+}
+@article{liu2019robertarobustlyoptimizedbert,
+      title={RoBERTa: A Robustly Optimized BERT Pretraining Approach}, 
+      author={Yinhan Liu and Myle Ott and Naman Goyal and Jingfei Du and Mandar Joshi and Danqi Chen and Omer Levy and Mike Lewis and Luke Zettlemoyer and Veselin Stoyanov},
+      year={2019},
+      journal={arXiv},
+}
+@inbook{linearregression,
+      title={Линейная и нелинейная регрессия.},
+      booktitle={Финансы и статистика},
+      author={Е. З. Демиденко},
+      year={1981},
+}
+@inbook{dessisiontree,
+      title={ Ограничения мощи алгоритмов: Деревья принятия решения},
+      booktitle={Алгоритмы. Введение в разработку и анализ},
+      author={А. В. Левитин},
+      year={2006},
+}
+@book{svm,
+      title={Математические основы теории машинного обучения и прогнозирования.},
+      author={Владимир Вьюгин.},
+      year={2013},
+}
+@book{llm,
+      title={ Human Language Understanding & Reasoning},
+      author={Christopher D. },
+      year={2022},
+}
+@book{kmeans,
+      title={Least square quantization in PCM’s. Bell Telephone Laboratories Paper.},
+      author={ Lloyd S. },
+      year={1957},
+}
+@book{dbscan,
+      title={Density-Based Clustering in Spatial Databases: The Algorithm GDBSCAN and Its Applications},
+      author={Martin Ester, Hans-Peter Kriegel, Jörg Sander, Xiaowei Xu},
+      year={1998},
+}
+@inbook{gan,
+      title={What to expect of artificial intelligence in 2017},
+      book={MIT Technology Review},
+      year={2017},
+}
+@article{song2021scorebasedgenerativemodelingstochastic,
+      title={Score-Based Generative Modeling through Stochastic Differential Equations}, 
+      author={Yang Song and Jascha Sohl-Dickstein and Diederik P. Kingma and Abhishek Kumar and Stefano Ermon and Ben Poole},
+      year={2021},
+      journal={arXiv},
+}
+@article{cfy_text,
+      title={АНАЛИЗ ИСХОДНОГО КОДА ПРИ ПОМОЩИ МЕТОДОВ МАШИННОГО ОБУЧЕНИЯ},
+      author={Александр Александрович Гоменюк},
+      year={2021}
+}
+@misc{tsne,
+      title={Visualizing Data Using t-SNE},
+      author={Google Tech Talk}
 }
