--- a/subfiles/part_1/codebert.tex
+++ b/subfiles/part_1/codebert.tex
@@ -8,7 +8,7 @@
 
 \subsubsection{Маскированное языковое моделирование}
 \par \acrfull{mlm} -- это ключевая задача предобучения в современных языковых моделях, где модель учится предсказывать специально замаскированные токены в исходном тексте или коде на основе контекста. Этот подход позволяет нейросетям глубоко усваивать синтаксические и семантические зависимости в данных.
-% #TODO  Слабо способствует обучению понимания всего кода
+\par Задача \acrshort{mlm} обладает существенными ограничениями в формировании целостного понимания текста, по скольку фокусируется исключительно на локальном востановлении маскированных токенов в ограниченном контексте, игнорируя глобальную структуру и логические связи между предложениями.
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{MLM.png}
@@ -21,8 +21,7 @@
     \item Предсказание -- модель анализирует контекст вокруг маски и вычисляет вероятность токенов кандидатов.
     \item Функция потерь -- ошибка считается только для замаскированных позиций.
 \end{enumerate}
-% #TODO Основными приемуществами использованя млм являются
-\par Почему же используют \acrshort{mlm}
+\par Основными приемуществами использования \acrshort{mlm} являются:
 \begin{itemize}
     \item Контекстное обучение -- модель учится находить взаимосвязи токенов, а не только статистику.
     \item Универасальность -- подходит для любых последовательностей, не требуя разметку.
@@ -34,7 +33,7 @@
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.6\textwidth]{rtd.png}
+    \includegraphics[width=0.8\textwidth]{rtd.png}
     \caption{Пример задачи RTD}
     \label{fig:rtd_bert}
 \end{figure}
@@ -45,12 +44,10 @@
     \item Предсказание -- модель анализирует контекст вокруг замены выявить является ли токен замененным.
     \item Функция потерь -- ошибка считается для замененных токенов и оригинальных.
 \end{enumerate}
-% #TODO Основными приемуществами РТД является 
-\par Почему же используют \acrshort{rtd}
+\par Основными приемуществами использования \acrshort{rtd} являются:
 \begin{itemize}
-    % #TODO СПСОБСТВУЕТ ЕЩЕ БОЛЬШЕМУ ПОНИМАНИЮ СТРУКТУРЫ ТЕКСТА
-    % #TODO \item Эффективность данных -- все токены используются в момент обучения.
-    % #TODO ПЕРЕДЕЛАЙ \item Вычислительная сложность -- низкая у \acrshort{rtd} потому что используется бинарная классификация.
+    \item Углубленное моделирование зависимостей текста -- за счет детекции некорректных токенов подстановок, что усиливает контекстуальное понимание лингвистических паттернов.
+    \item Качество представлений -- превосходит MLM при равных ресурсах (например, ELECTRA\cite{clark2020electrapretrainingtextencoders} показывает результат схожий с моделью RoBERTa\cite{liu2019robertarobustlyoptimizedbert}, однако использую в 4 раза меньше вычислений).
 \end{itemize}
 
 \end{document}
