--- a/subfiles/part_1/deep_learning.tex
+++ b/subfiles/part_1/deep_learning.tex
@@ -2,16 +2,13 @@
 
 \begin{document}
 \subsection{Глубокое обучение}
-% #TODO Свое назавние получили из-за попытки их построения на основе структуры нейронной сети млекопетающих, так же как человеческий мозг состоит из количества нейронных слоев, каждый из которых активируется.
-\par Глубокое обучение -- это подраздел машинного обучения, основанный на использовании искусственных нейронных сетей (\acrshort{nn}). Эти модели способны автоматически извлекать признаки из данных, имитируя работу человеческого мозга в упрощённой форме.
-% #TODO ПЕРЕПИСАТЬ
-\par Свое название оно получило благодаря многослойной архитектуре нейронных сетей, что позволяет моделям находить более сложные закономерности. Например, в задаче классификации изображений начальные слои определяют базовые признаки, такие как перепады света, простые геометрические фигуры. Второй слой используя уже обработанные данные определяет типы объектов на изображении. Таким образом модель может построить цепь признаков, получаемых друг из друга которые помогают решить задачу с высокой точностью.
+\par Глубокое обучение -- это подраздел машинного обучения, основанный на использовании искусственных нейронных сетей (\acrshort{nn}). Свое назавние получили из-за попытки их построения на основе структуры нейронных сетей млекопетающих, и состоит из нейронных слоев, каждый из которых поочередно активируется.
+\par Нейронные сети состоят из взаимосвязанных слоев искусственных нейронов, которые обрабатывают входные данные через последовательность линейных преобразований и нелинейных функций активации. Каждый нейрон имеет настраиваемые параметры: веса и смещения, которые подбираются в процессе обучения для минимизации ошибки предсказания. 
+\par Такакя архтектура позволяет моделям находить более сложные закономерности. Например, в задаче классификации изображений начальные слои определяют базовые признаки, такие как перепады света, простые геометрические фигуры. Второй слой используя уже обработанные данные определяет типы объектов на изображении. Таким образом модель может построить цепь признаков, получаемых друг из друга которые помогают решить задачу с высокой точностью.
 \par К сожалению, у нейронных сетей есть и недостатки:
 \begin{itemize}
-    % #TODO ПЕРЕПИСАТЬ, признаки внутри ящика не интерпретируемы, объяснить почему именна такая - нельзя, гарантировать что предсказания модели будут адекватными для новых данных не возможно
-    \item \textit{Сложность интерпретации} -- \acrshort{nn} представлют собой "черный ящик". Тоесть работа нейронной сети описанна непонятными человеку терминами, так же человек не может повлиять на признаки которые извлекает модель.
-    % #TODO НАПИСАТЬ ПРО ПАМЯТЬ И ВЫЧИСЛИТЕЛЬНАЯ СЛОЖНОСТЬ очень большая, например куб от входных данных
-    \item \textit{Вычислительная сложность} -- современные архитектуры могут иметь миллионы и миллиарды параметров, которые необходимо хранить в оперативной памяти.
+    \item \textit{Сложность интерпретации} -- Признаки, извлекаемые моделью, представляют собой абстрактные числовые паттерны, работающие по принципу "чёрного ящика" - их внутренняя логика не поддаётся содержательной интерпретации, что исключает возможность объяснения причин конкретных предсказаний и не гарантирует устойчивой работы на новых данных
+    \item \textit{Вычислительная сложность} -- Некоторые методы машинного обучения, особенно глубокие нейронные сети с миллионами параметров и алгоритмы обработки больших данных, требуют значительных вычислительных ресурсов и продолжительное время обучения, что ограничивает их применение в условиях ограниченных аппаратных возможностей.
 \end{itemize}
 \par В настоящее время глубокое обучение стало неотъемлемой частью нашей жизни. Благодаря ему работают голосовые помощники, системы рекомендаций и системы распознавания лиц.
 \par Основные направления в которых применяют глубокое обучение:
@@ -20,4 +17,5 @@
     \item \textit{Обработка естественного языка} -- Машинный перевод, языковое моделирование, LLM.
     \item \textit{Обучение с подкреплением} -- Робототехника, Игровые AI, LLM.
 \end{itemize}
+\par Обучение нейронных сетей осуществляется методов градиентного спуска, которые итеративно корректируют параметры модели в направлении антиградента функции потерь. Ключевое требования для такой оптимизации -- дифференцируемость всех компонентов сети, чтобы можно было вычислить градиенты с помощью алгоритма обратного распространения ошибки. 
 \end{document}
