--- a/subfiles/part_1/dino.tex
+++ b/subfiles/part_1/dino.tex
@@ -2,38 +2,66 @@
 
 \begin{document}
     \subsubsection{DINO}
-    % #TODO Не существет обоснования почему решение задачи млм способствует получению информации обо всем тексте
-    \par Интуитивно кажется что решение задачи \acrshort{mlm} не способствует тому что модель будет понимать структуру кода или какие-либо отличительные черты. 
-    % #TODO В последнее время большую популрность получил метод 
-    \par В ходе исследования внимание было обращено внимание на метод обучения \acrshort{dino}\cite{caron2021emergingpropertiesselfsupervisedvision,oquab2024dinov2learningrobustvisual,darcet2024visiontransformersneedregisters} разработанный FacebookResearch. % #TODO Этот алгоримт представляет собой способ эффективного извлечения признаков, можно Он позволяет эффективно обучать модели на изображениях без разметки, извлекать универсальные визуальные представления. 
-    \par Ключевая идея \acrshort{dino} — обучение c "самодистилляцией", тоесть % #TODO от модели требуется относить векторы представления чего то кчему то.
-    \par Для обучения используется две модели -- учитель и ученик. Учитель генерирует эталонные представления изображения, тогда как ученик пытается предсказать выход учителя. % #TODO Во время обучения изменяются веса ученика, а веса учителя являются экспоненциальным затуханием весов ученика на протяжении всего обучения, что позволяет модели обучать себя на предоставленных даннхы.
-    % #TODO В основе обучения состоит получение двух семантически разных кропов. Первая группа назваемая глобальными представлет собой участки изображения содержащи большую его часть. Вторая группа называемая локальными кропами содержит лишь небольшую часть изображенияч. В процессе обучения модели необходимо правильно сопоставить локальные участки с глобальными участками. При этом к каждому набору участков применяется множество аугментаций, такие как отражения, изменение баланса цвета, измененеие ярксти, изменение контраста. Так же модель учителя рассматривает только глобальные участки а модель ученика глобальные и локальные.
-    \par В процессе обучения изображения разделяются на участки. Сначала из изображения выделяются два глобальных участка(изображение включающее 90\% исходного). Затем из изображения выделяются шесть локальных участков (изображения включающие около 15\% исходного). После этого к каждому набору участок применяются аугментации(например отражение, изменение цветов и так далее) и глобальные участи передаются в учителя, а локальные в ученика.
-    \begin{figure}[h]
-        \centering
-        % #TODO Сабфигур
-        \includegraphics[width=0.8\textwidth]{multicrop_augment.png}
-        \caption{Пример multicrop augmentation}
+    \par Задача \acrshort{mlm}, не смотря на свою эффективность в предобучении языковых моделей, не обеспечивает понимания текста в силу локального характера оптимизации, где модель пресдказывает токены, не требуюя анализа глобальных связей. Так же модель может правильно угадывать слово не понимая смысла текста.
+    \par В последнее время большую популрность получил метод обучения \acrshort{dino}\cite{caron2021emergingpropertiesselfsupervisedvision, oquab2024dinov2learningrobustvisual, darcet2024visiontransformersneedregisters} разработанный FacebookResearch. Это современный алгоритм самообучения, который позволяет эффективно извлекат универсальные признаки из изображений без использования размеченных данных. 
+    \par Ключевая идея \acrshort{dino} -- принцип самодистеляции, где модель учится согласовывать представления одного изобажения после различных аугментаций , формируя устойчевые и информативные представления. 
+    \par Для обучения используется две модели -- учитель и ученик. Учитель генерирует эталонные представления изображения, тогда как ученик пытается предсказать выход учителя. Во время обучения изменяются исключительно параметры ученика, тогда как веса модели учителя вычисляется как экспоненциально взвешенное среднее весов ученика на каждой итерации, обеспечивая стабильное самообучение на неразмеченных данных.
+    \begin{figure*}[h]
+        \begin{subfigure}{0.33\textwidth}
+            \includegraphics[width=\linewidth]{orig_image.png}
+            \caption{Оригинальное изображение}
+        \end{subfigure}%
+        \hfill
+        \begin{subfigure}{0.33\textwidth}
+            \includegraphics[width=\linewidth]{global_crops.png}
+            \caption{Глобальные кропы}
+        \end{subfigure}%
+        \hfill
+        \begin{subfigure}{0.33\textwidth}
+            \includegraphics[width=\linewidth]{local_crops.png}
+            \caption{Локальные кропы}
+        \end{subfigure}%
         \label{fig:multicrop_augment}
-    \end{figure}
-    % #TODO 
-    \par Также в loss функции используется техника заострения(Sharpening), которая делает выходное вероятностное распределение более пиковым, уменьшая энтропию и подчеркивая наиболее вероятные классы. Это помогает избежать тривиальных решений, когда модель вырождается  и предсказывает равномерное распределение для всех входов. Sharpening выглядит как Softmax с параметром $\tau$
+    \end{figure*}
+    \par Для того чтобы избежать предсказания константы в \acrshort{dino} применяют центрирование. Из предсказания модели учителя вычитается скользящее среднее прыдудщих предсказаний модели учителя. Центрирование смещает выход учителя так, чтобы их среднее значение было близко к нулю, это раздвигает кластеры в пространстве признаков.
+    \par Также в loss функции используется техника заострения(Sharpening), которая делает выходное вероятностное распределение более пиковым, уменьшая энтропию и подчеркивая наиболее вероятные классы
     \begin{equation}
         \label{sharpening}
-        P(x)^{(i)} = \frac{exp\Big(\frac{g_\theta(x)^{(i)}}{\tau}\Big)}{\Sigma\limit^K_{k=1}exp\Big(\frac{g_\theta(x)^{(k)}}{\tau}\Big)}\,.
+        P(x)^{(i)} = \frac{\displaystyle exp\Bigg(\frac{g_\theta(x)^{(i)}}{\tau}\Bigg)}{\displaystyle \sum^K_{k=1}exp\Bigg(\frac{g_\theta(x)^{(k)}}{\tau}\Bigg)}\,.
     \end{equation}
-    % #TODO Представляет собой софтмакс с параметром тау
-    
-    \par В формуле \iqref{sharpening} показана функция sharpening для $i$ элемента модели $g$ с параметрами $\theta$. 
-    % #TODO В алгоритме дино основной функцие потерь является кросс энтропия, длинное предложение.
+
+    \begin{figure}[htbp]
+        \centering
+        \begin{subfigure}{.49\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{data.png}  
+            \caption{Оригинальные данные}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}{.49\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{sharpend_1.png}  
+            \caption{Данные после sharpening, $\tau = 1$}
+        \end{subfigure}
+        \vspace{1cm}
+        \begin{subfigure}{.49\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{sharpend_0_2.png}  
+            \caption{Данные после sharpening, $\tau = 0.2$}
+        \end{subfigure}
+        \hfill
+        \begin{subfigure}{.49\textwidth}
+            \centering
+            \includegraphics[width=.95\linewidth]{sharpend_0_1.png}  
+            \caption{Данные после sharpening, $\tau = 0.1$}
+        \end{subfigure}
+        \caption{Распределение данных}
+    \end{figure}
+
+    \par Это помогает избежать тривиальных решений, когда модель вырождается  и предсказывает равномерное распределение для всех входов.
+    \par В алгоритме \acrshort{dino} функцией потерь являетсяс кросс энтропия -- функция потерь измеряющая расстояние между двумя распределениями вероятностей.
     \begin{equation}
         \label{cross_entropy}
-        Loss = -P_t(x) \log \P_s(x)\,.
+        Loss = -P_t(x) \log P_s(x)\,.
     \end{equation}
-    \par В формуле \iqref{cross_entropy} показана функция потерь для учителя и студента.
-    \par В качестве Loss функции используется стандартная кросс этнтропия.
-    % #TODO не ученик меняет а мы меняем
-    \par В процессе обучения ученик изменяет свои веса таким образом чтобы уменьшить разницу предсказания с предсказанием учителя. Веса учителя постепенно изменяются обновбляясь как экспоненциальное скользящее среднее весов ученика.
-    % #TODO Написать про все лоссы
 \end{document}
