--- a/subfiles/part_1/study_with_teacher.tex
+++ b/subfiles/part_1/study_with_teacher.tex
@@ -1,28 +1,26 @@
 \documentclass[../part_1.tex]{subfiles}
 
 \begin{document}
-\subsubsection{Обучение с учителем} % Обучение с учителем
+\subsubsection{Обучение с учителем}
     \label{sec:with_teacher}
     \par Обучение с учителем -- это вид машинного обучения, при котором модель обучается на примерах, где для каждого входного объекта известен правильный ответ. Цель такого метода обучения -- построение модели, которая будет способна предсказать ответ для ранее не встречавшихся примеров с заданной точностью.
     \par Основные преимущества обучения с учителем:
     \begin{itemize}
-        % #TODO зачастую задачи обучения с учителем имеют понятные человеку ответ, за счет того что получение множества ответов производется путем ручной(выполняемой человеком) разметки входных данных
-        \item \textit{Интерпретируемость} -- модель работает с заранее определенным пространством выходных значений, так как разметка чаще составляется человеком.
+        \item \textit{Интерпретируемость} -- в задачах обучения с учителем ответы обычно интерпретируемы для человека, поскольку разметка данных выполняется вручную. Это позволяет моделям обучаться на четко определенных примерах, где каждому входу соответствует однозначный, понятный целевой признак.
         \item \textit{Интуитивная оценка качества} -- для оценки часто используется интуитивно понятные метрики такие как точность или средний квадрат ошибки. 
-        % #TODO Простота -- обучение с учителем является наиболее простопоставленной задачей, поскольку представляет собой апроксимацию таблично заданной функции.
+        \item \textit{Простота} -- обучение с учителем представляет собой задачу аппроксимации таблично заданной функции, что делает его наиболее простым и формализуемым видом обучения.
     \end{itemize}
     \par Основные недостатки обучения с учителем:
     \begin{itemize}
-        % #TODO НУЖНА РАЗМЕТКА, НУЖЕН ДАТАСЕТ
+        \item \textit{Наличие разметки} -- создание размеченных данных требует значительных временных затрат, а для узкоспециализированных областей может быть практически невозможна без привлечения экспертов.
         \item \textit{Зависимость от качества входных данных} -- эффективность модели напрямую определяется качеством размеченных данных, процесс создания которых требует значительных временных и трудозатрат. Для сложных задач объём требуемых данных может возрастать экспоненциально, что создаёт существенные практические ограничения.
         \item \textit{Проблема переобучения} -- существует риск избыточной подгонки модели под особенности обучающей выборки -- в таком случае алгоритм начинает воспроизводить не только значимые закономерности, но и случайные шумы, что резко снижает его способность к обобщению на новых данных.
     \end{itemize}
-    % #TODO К моделям обучаеммым данным методом можно отнести. Ссылка на литературу
-    \par Пример моделей которые обучаются с помощью обучения с учителем:
+    \par К моделям обучаеммым данным методом можно отнести:
     \begin{itemize}
-        \item Линейная регрессия
-        \item Дерево решений
-        \item Метод опорных векторов
+        \item Линейная регрессия\cite{linearregression}
+        \item Дерево решений\cite{dessisiontree}
+        \item Метод опорных векторов\cite{svm}
     \end{itemize}
     
 \end{document}
