--- a/subfiles/part_1/study_without_teacher.tex
+++ b/subfiles/part_1/study_without_teacher.tex
@@ -3,38 +3,32 @@
 \begin{document}
 \subsubsection{Обучение без учителя} 
     \label{sec:without_teacher}
-    % #TODO Зачастую в таких задачах не существует правильного ответа, а лишь известен метод оценки полученного результата
-    \par Обучение без учителя --  это вид машинного обучения, при котором модель обучается на примерах для которых известны только входные данные. Цель такого метода обучения -- построение модели которая сама будет находить закономерности, не опираясь на внешние подсказки. 
+    \par Обучение без учителя --  это вид машинного обучения, при котором модель обучается на примерах для которых известны только входные данные. В таких задачах, как правило, отсутствует верное решение, а качество результата оценивается исключительно с помощью специально разработанных метрик.
     \par Задачи обучения без учителя включают в себя:
     \begin{itemize}
-        % #TODO ПЕРЕПИСАТЬ, ВСМ ГРУППЫ МЕЖДУ СОБОЙ ПОХОЖИ
-        \item \textit{Кластеризацию} -- задача разделения объектов на группы, которые имеют сходство между собой и отличаются от других.
-        % #TODO Уменьшение объема данных об объекте за счет выделения ключевой информации
-        \item \textit{Снижение размерности} -- задача уменьшение количества признаков данных, сохраняя при этом информацию об объекте.
+        \item \textit{Кластеризацию} -- задача разделения набора данных на однородные группы таким образом, чтобы объекты внутри одного кластера были максимально схожи между собой, а объекты из разных клстеров -- максимально различны.
+        \item \textit{Снижение размерности} -- задача уменьшение объема данных, за счет выделения ключевой информации.
         \item \textit{Поиск ассоциативных правил} -- задача выявления устойчивых взаимосвязей между событиями в больших данных.
         \item \textit{Генеративные модели} -- задача создания новых объектов на основе некоторых входных данных задающих параметры выходного объекта.
-        % #TODO ИЗВЛЕЧЕНИЕ ПРИЗНАКОВ
+        \item \textit{Извлечение признаков} -- задача автоматического преобразования исходных данных в компактное и информативное векторое представление, пригодное для решения downstream задач.
     \end{itemize}
     \par Основные преимущества обучения без учителя:
     \begin{itemize}
         \item \textit{Не требуется разметка данных} -- работа с неразмеченными данными значительно облегчает процесс их сбора.
-        % #TODO Применимо к большему классу задач, по скольку для обучения требуется лишь мера качества предсказания, которая может быть основанна на чем угодно а не только на ответах
-        \item \textit{Гибкость и универсальность} -- применимо в разнообразных областях, а так же может использоваться для предобработки данных перед обучением с учителем.
+        \item \textit{Универсальность} -- применимо к большему классу задач, по скольку для обучения требуется лишь мера качества предсказания, которая может быть основанна на чем угодно а не только на ответах.
     \end{itemize}
     \par Основные недостатки обучения без учителя:
     \begin{itemize}
         \item \textit{Сложность оценки качества} -- отсутствие разметки требует построеия не менее эффективной и объективной функции оценки качества предсказания.
-        % #TODO ПОФИКСИТЬ
-        \item \textit{Проблема интерпретируемости} -- во многих задачах обучения без учителя предсказываемые моделью значения сложно интерпретируемы человеку за счет того что оно опирается на некоторые функции а не ответ человека // из-за того что предсказание модели не похоже на нормальне ответы их интерпритация затрудняется. 
+        \item \textit{Проблема интерпретируемости} -- во многих задачах обучения без учителя предсказываемые моделью значения сложно интерпретируемы человеку за счет того что оно опирается на некоторые функции, а не ответ человека.
     \end{itemize}
-    % #TODO К моделям обучаеммым данным методом можно отнести. Ссылка на литературу, добавить моделей
-    \par Пример моделей которые обучаются с помощью обучения без учителем:
+    \par К моделям обучаеммым данным методом можно отнести:
     \begin{itemize}
-        \item KMeans
-        \item CLUSTERING SMTH
-        \item Генеративные состязательные сети
-        \item LLM
-        \item Diffusion models
-        \item Feature extraction models
+        \item KMeans\cite{kmeans}
+        \item DBSCAN\cite{dbscan}
+        \item GAN\cite{gan}
+        \item LLM\cite{llm}
+        \item Diffusion models\cite{song2021scorebasedgenerativemodelingstochastic}
+        \item DINO
     \end{itemize}
 \end{document}
