--- a/subfiles/part_2/main.tex
+++ b/subfiles/part_2/main.tex
@@ -9,9 +9,9 @@
         \item Преобразовать multicrop augmentation
         \item Выбрать подходящие аугментации
     \end{itemize}
-    % #TODO Описать вит, привести пример токенизатора, позишн энкодинги, CLS токен, показать что я использую все, рассказать про self attention
     \subsubsection{Описание архитектуры нейронной сети}
-    \par Изначально архитектура разбивала исходное изображение на кусочки размером $16\times16$ пикселей, потом при помощи линейного преобразования преобразовывались в вектора embedding. Затем к ним прибавлялись Positional Embeddig и эти данные передавались дальше в блоки модели.
+    \par Изначально в методе обучения \acrshort{dino} была использованна архитектура ViT -- адаптация трансформерной архитектуры для обработки изображений, где входное изображение разбивается на последовательность неперекрывающихся патчей, которые линейно преобразуются в вектора  embedding. Для составления единого вектора представления в начало последоавтельности добавляют токен CLS, чье финальное отбражение используют для downstream задач. 
+    \par Использованная архитектура ViT в \acrshort{dino} разбивала исходное изображение на кусочки размером $16\times16$ пикселей. Затем к ним прибавлялись Positional Embeddig и эти данные передавались дальше в блоки модели.
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.6\textwidth]{model_arc.png}
@@ -38,20 +38,12 @@
     \par После этих изменений модель смогла работать с большими последовательностями токенов.
 
     \subsubsection{Multcirop augmentation}
-    \par В изначальной реализации участки выбирались случайным наложением границ на изображение. Для текста программ это не совсем подходит.
-    \par Было предложено 3 основных способа как делать код на блоки:
-    % #TODO Предложенно 3 способа выполнения мультикроп аугментации на коде, три параграфа Разделение по токенам, + картинка и примеры, и тд.
-    \begin{itemize}
-        \item Блоки отделяются по токенам
-        \item Блоки делятся по строкам кода - так как конец строки это конец выражения
-        \item Блоки делятся по ветвям синтаксического дерева - таким образом участок кода будет оконченным с точки зрения логики
-    \end{itemize}
-    \par Наилучшим из предложенных вариантов является разделение по ветвям синтаксического дерева, таким образом получится в качестве локальных участков брать завершенные логически блоки. % #TODO Потому что такой подход позволяет скрывать завершенные логические блоки.
-    \par В конечной реализации было решено использовать разделение блоков по токенам, таким образом получится больше уникальных блоков, что на небольшом датасете наборе данных, что значительно увеличит разнообразие в данных.
-    % #TODO переформулировать который
+    \par Для обработки текста методом, аналогичным разбиению изображений на кропы, исходный текст сначала преобразуется в последовательность токенов. Затем эта последовательность делится на блоки случайного размера.
+    \par Для улучшения качества семантической значимости блоков, можно делить код основываясь на символе переноса строки, так как оконченная строка программного кода, по сути своей, уже является логическим выражением.
+    \par Развивая прошлую идею, используется инструменты для синтаксического анализа кода, чтобы разбивать текст на блоки, благодаря ветвям синтаксического дерева. Такой подход позволяет получать завершенные логические блоки.
+    \par В конечной реализации было решено использовать разделение блоков по токенам, таким образом получится больше уникальных блоков небольшом наборе данных, что значительно увеличит разнообразие в данных.
     \subsubsection{Аугментация данных}
-    % #TODO Аугментация текстовых данных является нетривиальной задачей, к которой есть несколько подходов.
-    \par Аугментация текстовых данных -- нетривиальный процесс. Существует несколько основных подходов.
+    \par Аугментация текстовых данных является нетривиальной задачей, к которой есть несколько подходов.
     \begin{itemize}
         \item Синтаксические методы -- изменение структуры предложения с сохранением смысла. Основные способы: замена на синонимы, перестановка слов, добавление/удаление стоп слов.
         \item Семантические методы -- использование моделей для генерации новых вариантов текста. Основные способы: обратный перевод, генерация текста с помощью LLM, замена слов через предобученые \acrshort{mlm} модели.
