--- a/subfiles/part_2/requierments.tex
+++ b/subfiles/part_2/requierments.tex
@@ -8,8 +8,7 @@
     \item Хранилище данных которое обеспечит высокую скорость доступа к файлам. Рекомендуется использовать SSD.
     \item Оперативная память для хранения датасета. Рекомендуется 16 ГБ.
 \end{enumerate}
-% #TODO Большая скорость обучения модели может быть достигнута за счет использования большего количества графических процессоров.
-\par Так же можно увеличить количество графических процессоров, так как код позволяет обучать модель на нескольких GPU одновременно.
+\par Большая скорость обучения модели может быть достигнута за счет использования большего количества графических процессоров.
 \subsection{Требование к программному обеспечению}
 % #TODO ССыЛКИ
 \par Для обучения нейронной сети требуется:
