--- a/subfiles/part_3/training.tex
+++ b/subfiles/part_3/training.tex
@@ -2,16 +2,18 @@
 
 \begin{document}
 \subsection{Обучение модели}
-% #TODO  ТАФТАЛОГИЯ
-\par Следующим шагом работы было обучение моделей машинного обучения. 
-% #TODO АРХИТЕКТУРА список в каждом файле кто что делает
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=0.6\textwidth]{project_arc.png}
-    \caption{Архитектура проекта}
-    \label{fig:project_arc}
-\end{figure}
-\par На рисунке \ref{fig:project_arc} изображена архитектура проекта. Здесь для вызова обучения необходимо запустить файл main\_dino.py, с необходимыми аргументами.
+\par В данном разделе будет рассмотрен процесс обучения модели, включая выбор архитектуры и метода оптимизации.
+\subsubsection{Архитектура проекта}
+\par Проект состоит из следующих файлов:
+\begin{itemize}
+    \item main.py -- основной файл который запускает процесс обучения
+    \item eval\_batch.ipynb -- необходим для запуска обученной модели
+    \item transformer.py -- файл с описанием структуры архитектуры модели 
+    \item dataset.py -- файл с реализацией класса датасета
+    \item utils.py -- файл с вспомогательными функциями
+    \item augentations.py -- файл с аугментациями данных
+\end{itemize}
+\par Здесь для вызова обучения необходимо запустить файл main\_dino.py, с необходимыми аргументами.
 \par Перечень основных аргументов
 \begin{itemize}
     \item arch -- название архитектуры, которая будет использована для создания модели, изначально выбран t\_tiny.
@@ -23,7 +25,6 @@
     \item epochs -- количество эпох обучения. Изначально равно 100.
     \item local\_crops\_number -- количество локальных участков на одно наблюдение. Изначально равно 8.
 \end{itemize}
-% #TODO Версия убунты
-\par Для запуска был использован персональный компьютер с ОС Ubuntu, GPU Nvidia 3090 с 16гб видеопамяти, и 256 ГигаБайтами оперативной памяти. При этом, со всеми выставленными настройками было занято 14 из 16 ГигаБайт видеопамяти.
+\par Для запуска был использован персональный компьютер с ОС Ubuntu 22.04.5 LTS, GPU Nvidia 3090 с 16гб видеопамяти, и 256 ГигаБайтами оперативной памяти. При этом, со всеми выставленными настройками было занято 14 из 16 ГигаБайт видеопамяти.
 \par Весь процесс обучения занял 25 часов. Результатом работы был файл checkpoint.pth, в котором находились веса модели учителя и ученика, а так же данные из конфигурации процесса обучения.
 \end{document}
